klamm und heimlich WIP

--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -82,17 +82,21 @@ Einleitung (input)
 \spaltenende
 
 
-\input{asche_im_wind}
-
+\input{asche_im_wind/abenteuer}
+\input{klamm_und_heimlich/abenteuer}
+\input{bergkoenig/abenteuer}
 % charaktere 
 \neueseite
 \ohnehintergrund
-\includepdf[pages=-,addtotoc={1,section,1,Arion Nebelsucherin,nsc1}]{einreichungen/1/Charaktere/Arion Nebelsucherin.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Donata Donnerschlag,nsc2}]{einreichungen/1/Charaktere/Donata Donnerschlag.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Elidir Fenius Galahan,nsc3}]{einreichungen/1/Charaktere/Elidir Fenius Galahan.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Karox Sohn des Kalgrix,nsc4}]{einreichungen/1/Charaktere/Karox Sohn des Kalgrix.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Selindian der Würstchenspalter,nsc5}]{einreichungen/1/Charaktere/Selindian der Wurstchenspalter.pdf}
-
+% klamm und heimlich
+\includepdf[pages=-,addtotoc={1,section,1,Arion Nebelsucherin,nsc1}]{klamm_und_heimlich/charaktere/arion_nebelsucherin.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Donata Donnerschlag,nsc2}]{klamm_und_heimlich/charaktere/donata_donnerschlag.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Elidir Fenius Galahan,nsc3}]{klamm_und_heimlich/charaktere/elidir_fenius_galahan.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Karox Sohn des Kalgrix,nsc4}]{klamm_und_heimlich/charaktere/karox_sohn_des_kalgrix.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Selindian der Würstchenspalter,nsc5}]{klamm_und_heimlich/charaktere/selindian_der_wuerstchenspalter.pdf}
+% asche im wind
+\includepdf[pages=-,addtotoc={1,section,1,Eisen-Ala,nsc6}]{asche_im_wind/charaktere/eisen_ala.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Falkja Narejko,nsc7}]{asche_im_wind/charaktere/falkja_narejko.pdf}
 
 \neueseite
 \mithintergrund
